the alpha setting of creating new image in the texture painting mode doesn't work #41414

Closed
opened 2014-08-12 05:44:52 +02:00 by S S · 7 comments

System Information
Windows 7 64bit, GTX 66Ti

Blender Version
Broken: 2.71 64bit b65a022
Worked: haven't found

Short description of error
I want to create an image with alpha setting to 0 in the texture painting mode, but the alpha setting does't work.
I create a video to show the bug.alpha_setting_in_texture_painting_mode_bug.avi

Exact steps for others to reproduce the error
1, create a plane in blender render mode
2, enter texture paint mode, the plane will have a uv and a default black diffuse color texture.
3, on the tool shelf of the texture painting mode, click the slots tab. In the slots tab, click add texture paint texture option and add a diffuse color texture.
4, in the popup panel, click the color button, and set the alpha to 0.
5, in the UV editor, you can find the image just created with alpha setting to 1, not 0.

**System Information** Windows 7 64bit, GTX 66Ti **Blender Version** Broken: 2.71 64bit b65a022 Worked: haven't found **Short description of error** I want to create an image with alpha setting to 0 in the texture painting mode, but the alpha setting does't work. I create a video to show the bug.[alpha_setting_in_texture_painting_mode_bug.avi](https://archive.blender.org/developer/F102565/alpha_setting_in_texture_painting_mode_bug.avi) **Exact steps for others to reproduce the error** 1, create a plane in blender render mode 2, enter texture paint mode, the plane will have a uv and a default black diffuse color texture. 3, on the tool shelf of the texture painting mode, click the slots tab. In the slots tab, click add texture paint texture option and add a diffuse color texture. 4, in the popup panel, click the color button, and set the alpha to 0. 5, in the UV editor, you can find the image just created with alpha setting to 1, not 0.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @b1657022405

Added subscriber: @b1657022405
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-08-12 10:07:13 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Antony, not really sure why it might happen, also not sure about slots tab.. Mind having a look? :)

Antony, not really sure why it might happen, also not sure about slots tab.. Mind having a look? :)

This issue was referenced by ba345bcbb6

This issue was referenced by ba345bcbb6de5f32ba8ae3e9666077c707d10764

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ba345bcbb6.

Closed by commit ba345bcbb6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41414
No description provided.